--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
     </style>
   </head>
   <body style="background-color: lightcoral">
-    <a href="images.html">images</a><a href="overflow.html">overflow</a
-    ><a href="transform.html">transform</a><a href="cricket.html">cricket</a
-    ><a href="animation.html">animation</a><a href="custom.html">custom</a
-    ><a href="visibility.html">visibility</a
-    ><a href="spacificity.html">spacificity</a
-    ><a href="transition.html">transition</a>
+    <a href="images.html" target="_main">images</a
+    ><a href="overflow.html" target="_main">overflow</a
+    ><a href="transform.html" target="_main">transform</a
+    ><a href="cricket.html" target="_main">cricket</a
+    ><a href="animation.html" target="_main">animation</a
+    ><a href="custom.html" target="_main">custom</a
+    ><a href="visibility.html" target="_main">visibility</a
+    ><a href="spacificity.html" target="_main">spacificity</a
+    ><a href="transition.html" target="_main">transition</a>
   </body>
 </html>
