--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     </style>
   </head>
   <body style="background-color: lightcoral">
-    <a href="images.html" target="_main">images</a
-    ><a href="overflow.html" target="_main">overflow</a
-    ><a href="transform.html" target="_main">transform</a
-    ><a href="cricket.html" target="_main">cricket</a
-    ><a href="animation.html" target="_main">animation</a
-    ><a href="custom.html" target="_main">custom</a
-    ><a href="visibility.html" target="_main">visibility</a
-    ><a href="spacificity.html" target="_main">spacificity</a
-    ><a href="transition.html" target="_main">transition</a>
+    <a href="images.html" target="_blank">images</a
+    ><a href="overflow.html" target="_blank">overflow</a
+    ><a href="transform.html" target="_blank">transform</a
+    ><a href="cricket.html" target="_blank">cricket</a
+    ><a href="animation.html" target="_blank">animation</a
+    ><a href="custom.html" target="_blank">custom</a
+    ><a href="visibility.html" target="_blank">visibility</a
+    ><a href="spacificity.html" target="_blank">spacificity</a
+    ><a href="transition.html" target="_blank">transition</a>
   </body>
 </html>
