--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body style="background-color: lightcoral">
-    <a href="images.html" target="_blank">images</a
+    <a href="image.html" target="_blank">images</a
     ><a href="overflow.html" target="_blank">overflow</a
     ><a href="transform.html" target="_blank">transform</a
     ><a href="cricket.html" target="_blank">cricket</a
